@@ -8,6 +8,7 @@ Change Log:
 3.0.9 ( 2017-06-29 )
 - Added ability to turn off "Custom Sidebars" for certain roles.
 - Fixed a problem with category, category archive and post in category replacement.
+- Fixed a problem with removed "Category Archive" from "For Archives" options.
 
 3.0.8 ( 2017-06-08 )
 - Added bulk sidebars edit.
